--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -60,28 +60,32 @@ jobs:
           exit 1
 
   per-package-sboms:
-    name: SBOMs for Workspace Packages
+    name: Generate SBOMs for Workspace Packages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies using npm workspaces
-        run: npm ci
-
-      - name: Install Anchore CLI
+      # Fix: Update Python tooling (`pip`, `setuptools`, etc.)
+      - name: Upgrade pip, setuptools, and wheel
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y python3-pip
+          sudo apt-get install -y python3 python3-pip python3-venv
+          python3 -m pip install --upgrade pip setuptools wheel Cython
+
+      # Fix: Install Anchore CLI
+      - name: Install Anchore CLI
+        run: |
           pip3 install anchorecli
 
+      # Generate SBOMs per package in the workspaces
       - name: Generate SBOMs for each workspace package
         run: |
           # Cleanup any existing SBOM files
           rm -rf sboms
           mkdir -p sboms
 
-          # Iterate over workspace packages
+          # Properly parse workspace patterns
           for package_pattern in $(npm pkg get workspaces | jq -r '.[]'); do
             # Expand patterns to directories
             for package_path in $(find $package_pattern -type d -maxdepth 1); do
@@ -104,6 +108,7 @@ jobs:
             done
           done
 
+      # Upload SBOMs for all workspace packages
       - name: Upload SBOMs for workspace packages
         uses: actions/upload-artifact@v4
         with:
