chore(ci): fix typo

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -106,7 +106,7 @@ jobs:
   ort-check:
     name: ORT License & Policy Check
     runs-on: ubuntu-latest
-    needs: [scan, per-package-sboms]
+    needs: [scan, per-package-sbom]
     steps:
       # Step 1: Checkout code
       - name: Checkout code
