--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -77,17 +77,18 @@ jobs:
 
           # Loop through workspace patterns (apps/*, packages/*)
           for workspace in $(npm pkg get workspaces | jq -r '.[]'); do
-            # Expand the workspace pattern to match only the first level of directories
-            for package_path in $(find $workspace -maxdepth 1 -type d); do
-              # Ensure we only check for `package.json` in the root of directories
+            # Expand the workspace pattern to match only the first-level directories
+            for package_path in $(find $workspace -maxdepth 1 -mindepth 1 -type d); do
+              
               if [ -f "$package_path/package.json" ]; then
                 echo "Processing package: $package_path"
-                # Use Syft (Docker) to generate the SBOM in CycloneDX format
+
+                # Use Syft (Docker) to generate SBOM in CycloneDX format and include name/version
                 docker run --rm \
                   -v "$PWD/$package_path":/scan \
                   -v "$PWD/sboms":/output \
                   anchore/syft:latest \
-                  packages /scan -o cyclonedx-json=/output/"$(basename $package_path)_sbom.cdx.json"
+                  scan /scan --file /scan/package.json -o cyclonedx-json=/output/"$(basename $package_path)_sbom.cdx.json"
               else
                 echo "Skipping $package_path. No package.json detected."
               fi
