chore(ci): add step to install Anchore tools

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -69,6 +69,11 @@ jobs:
       - name: Install dependencies using workspaces
         run: npm ci
 
+      - name: Install Anchore tools
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+
       - name: Get list of workspaces
         id: workspaces
         run: |
