chore(ci): debug

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -76,19 +76,26 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Sanitize workspace name
+        id: sanitize-name
+        run: |
+          # Replace slashes "/" in project name with dashes "-"
+          sanitized_name=$(echo "${{ matrix.project }}" | sed 's|/|-|g')
+          echo "SANITIZED_NAME=${sanitized_name}" >> $GITHUB_ENV
+
       - name: Generate SBOM
         uses: anchore/sbom-action@v0
         with:
           path: ${{ matrix.project }}
           format: cyclonedx-json
-          output-file: sbom-${{ matrix.project.replace('/', '-') }}.cdx.json
+          output-file: sbom-${{ env.SANITIZED_NAME }}.cdx.json
           upload-artifact: false
 
       - name: Upload SBOM artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-${{ matrix.project.replace('/', '-') }}
-          path: sbom-${{ matrix.project.replace('/', '-') }}.cdx.json
+          name: sbom-${{ env.SANITIZED_NAME }}
+          path: sbom-${{ env.SANITIZED_NAME }}.cdx.json
 
       - name: Scan SBOM
         id: scan
@@ -104,7 +111,7 @@ jobs:
       - name: Upload Grype SARIF report
         uses: actions/upload-artifact@v4
         with:
-          name: sarif-${{ matrix.project.replace('/', '-') }}
+          name: sarif-${{ env.SANITIZED_NAME }}
           path: ${{ steps.scan.outputs.sarif }}
 
       - name: Fail on High/Critical Vulnerabilities
