--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -98,7 +98,7 @@ jobs:
   scan-workspaces:
     name: SBOM Each Workspace
     runs-on: ubuntu-latest
-   # needs: ort-check
+    # needs: ort-check
     strategy:
       matrix:
         project:
@@ -123,7 +123,7 @@ jobs:
       - name: Generate SBOM
         run: |
           echo "Generating SBOM for workspace: ${{ matrix.project }}"
-          npm sbom --sbom-format spdx --output SBOM.spdx
+          npm sbom --sbom-format spdx --output SBOM.spdx >> SBOM.spdx
           # Check if the SBOM was generated
           if [ ! -f SBOM.spdx ]; then
             echo "::error ::SBOM generation failed for ${{ matrix.project }}. File SBOM.spdx not found."
