--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -158,6 +158,14 @@ jobs:
             mv "$artifact" "$original_path/SBOM.spdx"
           done
 
+      - name: Set environment variables
+        run: echo "GITHUB_ACTOR=${{ github.actor }}" >> $GITHUB_ENV
+
+      - name: Set GitHub identity
+        run: |
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+
       - name: Pull latest changes to avoid conflicts
         run: git pull origin ${{ github.head_ref }}
 
