--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -78,27 +78,27 @@ jobs:
           name: anchore-scan-logs
           path: /path/to/scan/logs.log
 
-  ort-check:
-    name: ORT License & Policy Check
-    runs-on: ubuntu-latest
-    needs: scan
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install dependencies using npm workspaces
-        run: npm ci
-
-      - name: Run ORT
-        id: ort
-        uses: oss-review-toolkit/ort-ci-github-action@v1
-        with:
-          allow-dynamic-versions: 'true'
+  # ort-check:
+  #   name: ORT License & Policy Check
+  #   runs-on: ubuntu-latest
+  #   needs: scan
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Install dependencies using npm workspaces
+  #       run: npm ci
+  #
+  #     - name: Run ORT
+  #       id: ort
+  #       uses: oss-review-toolkit/ort-ci-github-action@v1
+  #       with:
+  #         allow-dynamic-versions: 'true'
 
   scan-workspaces:
     name: SBOM Each Workspace
     runs-on: ubuntu-latest
-    needs: ort-check
+    #needs: ort-check
     strategy:
       matrix:
         project:
@@ -123,10 +123,10 @@ jobs:
       - name: Generate SBOM
         run: |
           echo "Generating SBOM for workspace: ${{ matrix.project }}"
-          npm sbom --sbom-format spdx --output SBOM.spdx >> SBOM.spdx
-          # Check if the SBOM was generated
-          if [ ! -f SBOM.spdx ]; then
-            echo "::error ::SBOM generation failed for ${{ matrix.project }}. File SBOM.spdx not found."
+          sbom_path="${{ matrix.project }}/SBOM.spdx"
+          npm sbom --sbom-format spdx --output "$sbom_path"
+          if [ ! -f "$sbom_path" ]; then
+            echo "::error ::SBOM generation failed for ${{ matrix.project }}. File $sbom_path not found."
             exit 1
           fi
 
@@ -152,10 +152,11 @@ jobs:
       - name: Restore SBOM Files to Original Paths
         run: |
           for artifact in ./sboms/*; do
-            sanitized_name=$(basename "$artifact")
-            original_path=$(echo "$sanitized_name" | sed 's|-|/|g' | sed 's|sbom-||')
-            mkdir -p "$original_path"
-            mv "$artifact" "$original_path/SBOM.spdx"
+            artifact_name=$(basename "$artifact")
+            # Convert sbom-packages-aws-authenticator → packages/aws-authenticator
+            project_path=$(echo "$artifact_name" | sed 's|sbom-||' | sed 's|-|/|g')
+            mkdir -p "$project_path"
+            mv "$artifact"/SBOM.spdx "$project_path/SBOM.spdx"
           done
 
       - name: Set environment variables
