--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -98,7 +98,7 @@ jobs:
   scan-workspaces:
     name: SBOM Each Workspace
     runs-on: ubuntu-latest
-    #needs: ort-check
+    # needs: ort-check
     strategy:
       matrix:
         project:
@@ -123,10 +123,10 @@ jobs:
       - name: Generate SBOM
         run: |
           echo "Generating SBOM for workspace: ${{ matrix.project }}"
-          sbom_path="${{ matrix.project }}/SBOM.spdx"
-          npm sbom --sbom-format spdx --output "$sbom_path"
-          if [ ! -f "$sbom_path" ]; then
-            echo "::error ::SBOM generation failed for ${{ matrix.project }}. File $sbom_path not found."
+          npm sbom --sbom-format spdx --output SBOM.spdx >> SBOM.spdx
+          # Check if the SBOM was generated
+          if [ ! -f SBOM.spdx ]; then
+            echo "::error ::SBOM generation failed for ${{ matrix.project }}. File SBOM.spdx not found."
             exit 1
           fi
 
@@ -149,14 +149,16 @@ jobs:
         with:
           path: ./sboms
 
+      - name: Debug artifact contents
+        run: ls -R ./sboms
+
       - name: Restore SBOM Files to Original Paths
         run: |
           for artifact in ./sboms/*; do
-            artifact_name=$(basename "$artifact")
-            # Convert sbom-packages-aws-authenticator → packages/aws-authenticator
-            project_path=$(echo "$artifact_name" | sed 's|sbom-||' | sed 's|-|/|g')
-            mkdir -p "$project_path"
-            mv "$artifact"/SBOM.spdx "$project_path/SBOM.spdx"
+            sanitized_name=$(basename "$artifact")
+            original_path=$(echo "$sanitized_name" | sed 's|-|/|g' | sed 's|sbom-||')
+            mkdir -p "$original_path"
+            mv "$artifact" "$original_path/SBOM.spdx"
           done
 
       - name: Set environment variables
