--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -157,7 +157,11 @@ jobs:
         run: |
           for artifact in ./sboms/*; do
             sanitized_name=$(basename "$artifact")
-            original_path=$(echo "$sanitized_name" | sed -E 's|^sbom-([^/-]+)-(.+)$|\1/\2|')
+            if [[ "$sanitized_name" =~ ^sbom-([^/-]+)-(.+)$ ]]; then
+              original_path="${BASH_REMATCH[1]}/${BASH_REMATCH[2]}"
+            else
+              original_path=$(echo "$sanitized_name" | sed 's|^sbom-||')
+            fi
             echo "Restoring SBOM to: $original_path/SBOM.spdx"
             mkdir -p "$original_path"
             mv "$artifact/SBOM.spdx" "$original_path/SBOM.spdx"
