chore(ci): include current branch into foss check workflow

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - IAV-FF-feature-foss-check-integration-192
+      - IAV-FF-fix-critical-vulnerabilities-383
     paths-ignore:
       - '**/*.spdx'
       - '**/*.sbom.json'
