--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,15 @@
-name: Release
+name: Release (Dry Run on Test Branch)
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - main
-      - develop
-    paths-ignore:
-      - 'SBOM.json'
-      - '*.md'
-      - '.github/**/*'
-      - 'docs/**/*'
+      - ci-github-app-release-304
+
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
   release:
@@ -24,7 +23,7 @@ jobs:
         with:
           node-version: '22.x'
 
-      - run: npm i
+      - run: npm ci
 
       - name: Copy root README to frontend-framework package
         run: cp README.md packages/frontend-framework/README.md
@@ -33,8 +32,16 @@ jobs:
 
       - run: npm run test
 
-      - name: Build all packages and release them
+      - name: Generate GitHub App token
+        id: generate_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.GH_APP_ID }}
+          private_key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          installation_id: ${{ secrets.GH_APP_INSTALLATION_ID }}
+
+      - name: Semantic Release Dry Run
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm run release
+          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
+          NPM_TOKEN: dummy
+        run: npx semantic-release --dry-run --ci
