feat(build): adapt build process to include shared assets in build-lifecycle

--- a/packages/frontend-framework/tsconfig.json
+++ b/packages/frontend-framework/tsconfig.json
@@ -19,5 +19,5 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "include": ["src", "custom.d.ts"]
+  "include": ["src", "custom.d.ts", "../shared/assets/svg/companyLogo.d.ts", "../shared/assets/svg/companyLogo.tsx"]
 }
