--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -2,9 +2,6 @@ name: FOSS Check
 
 on:
   push:
-    branches:
-      - IAV-FF-fix-critical-vulnerabilities-383
-      - IAV-FF-feature-foss-check-integration-192
     paths-ignore:
       - '**/*.spdx'
       - '**/*.sbom.json'
@@ -64,13 +61,6 @@ jobs:
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }}
 
-      # Step 7: Fail build on high/critical vulnerabilities
-      - name: Fail on High/Critical Vulnerabilities
-        if: ${{ steps.scan.conclusion == 'failure' }}
-        run: |
-          echo "::error ::High/Critical vulnerabilities detected! Failing job."
-          exit 1
-
       # Upload Anchore logs in case of failure
       - name: Upload Scan Logs
         if: failure()
@@ -79,22 +69,22 @@ jobs:
           name: anchore-scan-logs
           path: /path/to/scan/logs.log
 
-  # ort-check:
-  #   name: ORT License & Policy Check
-  #   runs-on: ubuntu-latest
-  #   needs: scan
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #
-  #     - name: Install dependencies using npm workspaces
-  #       run: npm ci
-  #
-  #     - name: Run ORT
-  #       id: ort
-  #       uses: oss-review-toolkit/ort-ci-github-action@v1
-  #       with:
-  #         allow-dynamic-versions: 'true'
+  ort-check:
+    name: ORT License & Policy Check
+    runs-on: ubuntu-latest
+    needs: scan
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies using npm workspaces
+        run: npm ci
+
+      - name: Run ORT
+        id: ort
+        uses: oss-review-toolkit/ort-ci-github-action@v1
+        with:
+          allow-dynamic-versions: 'true'
 
   scan-workspaces:
     name: SBOM Each Workspace
