chore(ci): uncomment job dependency

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -89,7 +89,7 @@ jobs:
   scan-workspaces:
     name: SBOM Each Workspace
     runs-on: ubuntu-latest
-    # needs: ort-check
+    needs: ort-check
     strategy:
       matrix:
         project:
